# Q4_AgenticAi_Sir_Aneeq_Task

Practical_task1/01_uv/: READme.md
Practical_task1/01_uv/project1/explore-uv/: README.md  pyproject.toml
Practical_task1/01_uv/project2/uvproject2/: pyproject.toml
Practical_task1/01_uv/project2/uvproject2/src/uvproject2/: __init__.py
Practical_task1/02_openrouter/: ReadMe.md
Practical_task1/02_openrouter/OpenRouter_AI_Agents_SDK/: ReadME.md
Practical_task1/03_litellm_openai_agent/: ReadMe.md
Practical_task1/03_litellm_openai_agent/01_litellm/myproject/: README.md  pyproject.toml
Practical_task1/03_litellm_openai_agent/02_uv_litellm_chainlite/chatbot/: main.py  pyproject.toml
Practical_task1/04_hello_agent/async/hello_agent/: pyproject.toml
Practical_task1/04_hello_agent/hello_agent/: agent_gemini.py
Practical_task1/04_hello_agent/sync/hello_agent/: .env  main.py
Practical_task1/05_chainlit/hello_world/: chatbot.py  pyproject.toml  readme.md
