[project]
name = "myproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "SarwatMajeed24", email = "sarwatmajeed2015@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.72.0",
]

[project.scripts]
myproject = "myproject:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
